[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asset/Pic/Element/element_change.png" type="Texture" id=1]
[ext_resource path="res://Game/Element/Swtich/Swtich.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Swtich" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -26.2725, -49.8757, -93.1125, -0.960983, -28.9483, 49.4231, -23.0022, 22.9633, 24.5661, 24.4498, 28.1337, 47.9366, 90.2697, -2.30738, 30.2148, -51.3622, 25.1607, -26.3888, -25.0833, -25.7942 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/out = SubResource( 1 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
